--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>WoodTree JS</title>
-	<script src="//raw.github.com/randombrad/woodtree/master/woodtree.js"></script>
+	<script src="//randombrad.github.com/woodtree/woodtree.js"></script>
 </head>
 <body>
 	<div id="tree"></div>
